--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
     src: url('../fonts/source-sans-pro/SourceSansPro-Regular.otf');
 }
 
+}
+@font-face {
+    font-family: "Source Sans Pro";
+    src: url('../fonts/source-sans-pro/SourceSansPro-Bold.otf');
+    font-weight: bold;
+}
+
 body{
     font-family: "Source Sans Pro";
 }
