--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
 }
 
 .logo{
-    background-image: url("../img/pancadalogo.png");
+    background-image: url("../img/pancadalogo1.png");
     background-repeat: no-repeat;
     width: 120px;
     height: 53px;
