--- a/css/style.css
+++ b/css/style.css
@@ -25,5 +25,5 @@ body{
     background-repeat: no-repeat;
     width: 637px;
     height: 146px;
-    text indent: -9999px; ;
+    text-indent: -9999px; ;
 }
