--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
 }
 
 .logo{
-    background-image: url("../img/pancadalogo1.png");
+    background-image: url("../img/pancadalogo1.png"); width: 20%; height: 20%;
     background-repeat: no-repeat;
     width: 637px;
     height: 146px;
