--- a/css/style.css
+++ b/css/style.css
@@ -25,5 +25,6 @@ body{
     background-repeat: no-repeat;
     width: 637px;  
     height: 146px;
+    object-fit: 20%;
     text-indent: -9999px; ;
 }
