--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,6 @@ body{
     background-repeat: no-repeat;
     width: 637px;  
     height: 146px;
-    size-adjust: 10%;
+    image-resolution: 10%;
     text-indent: -9999px; ;
 }
