--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,18 @@ body{
     text-indent: -9999px; ;
     margin: 0;
 }
+
+.menu-principal__btn{
+    display: block;
+    width: 50px;
+    height: 50px;
+    text-indent: -9999px;
+    background-color: #fff;
+    background-image: url('../img/menuprincipal-btn-bg.png');
+    background-repeat: no-repeat;
+    background-position: 5px 5px;
+    border-color: #c4c4c4;
+    border-style: solid;
+    border-radius: 5px;
+
+}
