--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body{
     border-color: #c4c4c4;
     border-style: solid;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .menu-principal__btn--fechar{
