--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ body{
     border-style: solid;
     border-radius: 5px;
     cursor: pointer;
+
+    position: absolute;
+    top: 15px;
+    right: 15px;
 }
 
 .menu-principal__btn--fechar{
