--- a/css/style-sobre.css
+++ b/css/style-sobre.css
@@ -22,8 +22,15 @@
 }
 .pagina-conteudo{
     padding: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 .pagina-conteudo p{
     color: #3a3a3a;
     line-height: 22px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.text-center{
+    text-align: center;
 }
