--- a/css/style-home.css
+++ b/css/style-home.css
@@ -12,17 +12,25 @@
 .cabecalho-home__role{
     display: none;
 }
-.home_titulo{
+.home__titulo{
     text-align: center;
     text-transform: uppercase;
 }
-.home_titulo::after{
+.home__titulo::after{
     content:'';
     display: block;
     width: 50px;
     height: 3px;
     background-color: #03fa2d;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 15px;
+}
+.servicos{
+    padding: 30px 0;
+}
+.servicos__item{
+    text-align: center;
+    padding: 0 15px;
+    margin-bottom: 30px;
 }
 
