--- a/css/style-home.css
+++ b/css/style-home.css
@@ -1,5 +1,5 @@
 .cabecalho-home{
-    background: url(../img/pancada5.jpg) #000 no-repeat;
+    background: url(../img/pancada5.jpg) #000 no-repeat; 
     background-size: cover;
     color: #fff;
     text-align: center;
@@ -15,7 +15,9 @@
 .home__titulo{
     text-align: center;
     text-transform: uppercase;
+    margin-bottom: 50px;
 }
+
 .home__titulo::after{
     content:'';
     display: block;
@@ -25,6 +27,9 @@
     margin: 0 auto;
     margin-top: 15px;
 }
+.home__titulo--branco::after{
+    background-color: #fff;
+}
 .servicos{
     padding: 30px 0;
 }
@@ -33,4 +38,35 @@
     padding: 0 15px;
     margin-bottom: 30px;
 }
+.servicos__texto{
+    color: #585858;
+}
+.curiosidades{
+    background-color: rgb(102, 161, 14);
+    background-image: url("../img/cabecalho.jpg");
+    color: #fff;
+    padding: 30px 0;
+}
+.curiosidades__item{
+    padding: 0 15px;
+}
+.curiosidades__img{
+    margin: 0 auto;
+    display: block;
+    box-shadow: 3px 3px 0 #000;
+    margin-bottom: 30px;
+}
+.curiosidades__texto{
+    line-height: 24px;
+    margin-bottom: 30px;
+}
+.curiosidades__texto::before{
+    background: url(../img/aspas.png) no-repeat;
+    content: '';
+    display: inline-block;
+    width: 25px;
+    height: 23px;
+    margin-right: 5px;
+}
+
 
