--- a/sass/components/_curiosidades.scss
+++ b/sass/components/_curiosidades.scss
@@ -1,5 +1,5 @@
 .curiosidades{
-    background-color: rgb(102, 161, 14);
+    background-color: $cor-principal;
     background-image: url("../img/cabecalho.jpg");
     color: #fff;
     padding: 30px 0;
