--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ body {
   text-align: center; }
 
 .curiosidades {
-  background-color: #66a10e;
+  background-color: #03fa2d;
   background-image: url("../img/cabecalho.jpg");
   color: #fff;
   padding: 30px 0; }
@@ -483,10 +483,10 @@ body {
   font-size: 18px; }
 
 .menu-principal__item--atual {
-  color: #66a10e; }
+  color: #03fa2d; }
 
 .pagina-cabecalho {
-  background-color: #66a10e;
+  background-color: #03fa2d;
   background-image: url("../img/cabecalho.jpg");
   color: #fff;
   padding-top: 40px;
