--- a/sass/components/_forumulario.scss
+++ b/sass/components/_forumulario.scss
@@ -18,10 +18,10 @@
     color: #343434;
 }
 .formulario__botao{
-    border: 3px solid #03fa2d; 
+    border: 3px solid $cor-principal; 
     border-radius: 300px;
     background-color: #fff;  
-    color: #03fa2d;
+    color: $cor-principal;
     padding: 5px 20px;
     cursor: pointer;
     display: block;
