--- a/sass/components/_pagina-cabecalho.scss
+++ b/sass/components/_pagina-cabecalho.scss
@@ -1,5 +1,5 @@
 .pagina-cabecalho{
-    background-color: rgb(102, 161, 14);
+    background-color: $cor-principal;
     background-image: url("../img/cabecalho.jpg");
     color: #fff;
     padding-top: 40px;
