--- a/sass/pages/_pagina-inicial.scss
+++ b/sass/pages/_pagina-inicial.scss
@@ -23,7 +23,7 @@
     display: block;
     width: 50px;
     height: 3px;
-    background-color: #03fa2d;
+    background-color: $cor-principal;
     margin: 0 auto;
     margin-top: 15px;
 }
