--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,8 @@
 @import 'base/meu-reset';
 
 @import 'layout/_cabecalho';
-@import 'layout/rodape';
+@import 'layout/_rodape';
+@import 'layout/container';
 
 @import 'components/_alinhamento-texto';
 @import 'components/_curiosidades';
