--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,8 @@ body {
   color: #03fa2d; }
 
 .container {
-  width: 1200px; }
+  max-width: 1200px;
+  margin: 0 auto; }
 
 .text-center {
   text-align: center; }
