--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,7 @@ body {
 
 .curiosidades {
   background-color: #03fa2d;
-  background-image: url("../img/cabecalho.jpg");
+  background-image: url("../img/pancadaverde.jpeg");
   color: #fff;
   padding: 30px 0; }
   .curiosidades__item {
